Add course problem sets and demo

--- a/week_01/problem_set/problem_set_01.tex
+++ b/week_01/problem_set/problem_set_01.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 
 \title{ Regular Expressions in R (Functions \& Validation)}
-\author{Jared Edgerton}
+\author{ }
 \date{ }
 
 
