--- a/week_02/problem_set/problem_set_02.tex
+++ b/week_02/problem_set/problem_set_02.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 
 \title{ Web Scraping in the Social Sciences}
-\author{Jared Edgerton}
+\author{ }
 \date{ }
 
 
