--- a/week_06/problem_set/problem_set_06.tex
+++ b/week_06/problem_set/problem_set_06.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 
 \title{ Deterministic and Probabilistic Matching}
-\author{Jared Edgerton}
+\author{ }
 \date{ }
 
 
