--- a/week_08/problem_set/problem_set_08.tex
+++ b/week_08/problem_set/problem_set_08.tex
@@ -1,3 +1,14 @@
+\documentclass[11pt]{article}
+\usepackage{amsmath, amssymb, graphicx, hyperref}
+\usepackage{enumitem}
+\setlist{nosep}
+\usepackage[margin=1in]{geometry}
+
+\title{ Network analysis}
+\author{ }
+\date{ }
+
+
 \begin{document}
 \maketitle
 
