--- a/week_09/problem_set/proboem_set_09.tex
+++ b/week_09/problem_set/proboem_set_09.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 
 \title{ Spatial Data, GIS, and Remote Sensing}
-\author{Jared Edgerton}
+\author{ }
 \date{ }
 
 
