--- a/week_04/problem_set/problem_set_04.tex
+++ b/week_04/problem_set/problem_set_04.tex
@@ -5,7 +5,7 @@
 \usepackage[margin=1in]{geometry}
 
 \title{ Surveys, Platforms, and Crowdsourcing}
-\author{Jared Edgerton}
+\author{ }
 \date{ }
 
 
